# django-admin-views

./: README.rst  pyproject.toml
