[tool.poetry]
name = "django-admin-views"
version = "0.8.0"
description = "django-admin-views is a simple way to add custom admin views and direct URLs to the Django admin"
authors = ["Frank Wiles <frank@revsys.com>"]
packages = [
    { include = "admin_views" },
]
readme = "README.rst"
repository = "https://github.com/frankwiles/django-admin-views"
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Framework :: Django',
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]
django-coverage = "*"
coverage = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
